--- a/public/404.html
+++ b/public/404.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <title>GuTianhuang's blog</title>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
+    <meta name="description" content="GuTianhuang" />
+    <title>GuTianhuang</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" type="image/x-icon" />
     <script type="text/javascript">
       var segmentCount = 0
