--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="GuTianhuang" />
     <title>GuTianhuang</title>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png" type="image/x-icon" />
+    <style>
+      body {
+        background: #000;
+      }
+    </style>
     <script type="text/javascript">
       ;(function (l) {
         if (l.search) {
